--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
   "keywords": [],
   "website": "https://mrcomputer1forums.github.io",
   "repository": "https://github.com/Mrcomputer1Forums/DeployToHeroku",
-  "success_url": "/",
+  "success_url": "/install/",
   "scripts": {
     "postdeploy": "python manage.py migrate"
   }
